フォルダアクセス例外対応と py -0p 読み込み

--- a/App.config
+++ b/App.config
@@ -19,6 +19,12 @@
             <setting name="DefaultEnv" serializeAs="String">
                 <value />
             </setting>
+            <setting name="SelectedPyEnvNo" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="SelectedPyVenvNo" serializeAs="String">
+                <value>0</value>
+            </setting>
         </HamuQonda.Properties.Settings>
     </userSettings>
 </configuration>
